--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   english_words: ^3.1.5
+  equatable: ^1.2.5
+  flutter_bloc: ^6.1.1
 
 dev_dependencies:
   flutter_test:
